<resources>
    <string name="app_name">Build Your Event</string>
    <string name="forgot_password"> Forgot You Password? You need to enter you registered email address, we will send the recovery code to your email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home"> Products </string>
    <string name="title_dashboard"> Dashboard </string>
    <string name="title_notifications"> Favories </string>
    <string name="title_profile"> Profile </string>
    <string name="title_Settings"> Setting </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="card_holder">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="valid_thru">Valid Thru</string>
    <string name="mm">MM</string>
    <string name="YY">YY</string>
    <string name="date_hint">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">000</string>
    <string name="space">" "</string>
    <string name="default_card_no">#### #### #### ####</string>
    <string name="autgorized_signature">Authorized signature</string>
    <string name="pay">Pay</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_new_email">enter new email</string>
    <string name="btn_change">change</string>
    <string name="new_pass">new password</string>
    <string name="btn_send">send email</string>
    <string name="btn_remove">remove account</string>
    <string name="change_email">change email</string>
    <string name="remove_user">remove account</string>
    <string name="btn_sign_out">sign out</string>
    <string name="title_favorites">Favorites</string>
    <string name="change_password">change password</string>
    <string name="send_password_reset_email">send password reset email</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="title_message">Messages</string>
    <string name="build_your_event">Build your event</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="skip">Skip</string>
    <string name="user_name">Username</string>
    <string name="country_hint">Country</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="please_enter_the_verification_code_you_are_received_from">Please enter the verification code you are received from</string>
    <string name="verification_code">verification code</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="view_supported_banks_and_cards">View Supported Banks and Cards</string>
    <string name="full_services_event">Full Services Event</string>
    <string name="log_out">Log Out</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="product_name">Product Name</string>
    <string name="available_amount">Available Amount</string>
    <string name="product_price">50 AED perDay</string>
    <string name="quantity">Qty</string>
    <string name="days">Days</string>
    <string name="start_date">start Date</string>
    <string name="startdate_productstate">availale</string>
    <string name="end_date">end Date</string>
    <string name="enddate_productstate">not availale</string>
    <string name="event_location">Event City Location</string>
    <string name="language">Language</string>
    <string name="choose_language">Pick a language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="manage_account">Manage Account</string>
    <string name="app_settings">App Settings</string>
    <string name="single_sofa">SINGLE SOFA</string>
    <string name="city_hint">City</string>
    <string name="mobile_hint">Mobile</string>
    <string name="order_now">Order Now</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="full_name">Full Name</string>
    <string name="user_information">User Information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="your_are_not_login">Your are not login</string>
    <string name="login_now">Login Now</string>
    <string name="enter_password">enter new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="remove_item">Remove Item</string>
    <string name="product_countryevent">Event Country </string>
    <string name="product_cityevent">Event City </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location">Map</string>
    <string name="select_location_from_map">Select Location From Map</string>
    <string name="about_app">About App</string>
    <string name="agree_to_app_conditions">Agree to App Conditions</string>
    <string name="condition_toast">You need to agree the app Condition</string>
    <string name="enter_mobile">enter mobile</string>
    <string name="short_password">short password</string>
    <string name="invalid_email">invalid email</string>
    <string name="enter_name">enter name</string>
    <string name="enter_email">enter email</string>
    <string name="choose_country">Choose Your Country</string>
    <string name="choose_city">Choose Your City</string>
    <string name="email_is_take">The email has already been taken. you need to complete registeration</string>
    <string name="item_in_carts">this item is already in carts</string>
    <string name="select_a_location">Select a location</string>
    <string name="about_app_text">
مرحباً نحن شركة VRE Tech للخدمات الالكترونية الخاصة بالفعاليات والحفلات.
Visual reality event technology
تكتولوجيا فعاليات العالم الإفتراضي
اسست الشركة عام 2020 في مدينة دبي بدولة الامارات العربية المتحدة وهي متخصصة بمجال التطبيقات الخاصة بالفعاليات والحفلات.
وتطبيق build your event هو احد التطبيقات الخاصة بالشركة وهو الاول من نوعه حيث يوفر للعميل كل ما يحتاجه مع اجل عمل فعالية او حفل، حيث ان العميل لن يحتاج اي شخص او اي شركة لإدارة فعاليه،  فعلى سبيل المثال اذا كان لديك مؤتمر او اي حفل فيمكن استخدام التطبيق كي تستاجر الكراسي والطاولات والمسرح والشاشة والورود وخدمة الضيافة والاعلانات واختيار الرعاه الذي يمكن ان يرعو هذا الحفل او المؤتمر وكل ما يلزمك لعمل الفعالية التي تريدها، كما يمكنك البحث عن مدير لإدارة فعاليتك، كما يمكنك حجز الصالة المناسبة لإقامة العفالية.
مع تطبيق build your event ستدير فعاليتك بنفس وستوفر الوقت والمال.
عن المالك
شركة VRE Tech  مملوكة للمصمم يوسف عبدالله بكر، ولد في مدينة حلب السورية عام 1985
حاصل على شهادة التصميم الغرافيك من جامعة تشرين السورية، عمل في مجال التصميم الاعلاني والديكور والتصميم ثلاثي الابعاد اكثر من 13 سنة ولديه العديد من الجوائز والدروع التزكارية من عدة جهات من حكومة الامارات العربية المتحدة
اهدافنا
توفير الجهد والمال وجعل كل شخص يستطيع إدارة فعاليته بنفسه.
رؤيتنا
جعل عالم الفعاليات اكثر سهولة وفي متناول الجميع.
    </string>
    <string name="category_hint">Category</string>
    <string name="sub_category">SubCategory</string>
    <string name="add_to_my_products"> Add </string>
    <string name="no_products">There isn\'t any products for this subcategory</string>
    <string name="rate">Rate This Product</string>
    <string name="update">Update</string>
    <string name="about_company"> About Company</string>
    <string name="description">description</string>
    <string name="status">status</string>
    <string name="conditionss"> Terms and conditions </string>
    <string name="condition_title"> Before you accept the Terms and conditions You have to read well  </string>
    <string name="condition_user"> Terms and conditions for lessor </string>
    <string name="user_condition1"> 1-	every company will upload the products by them self  </string>
    <string name="user_condition2"> 2-	every company should manage products by them self. step by step availability, quantity, date available. And will by have full responsibility about all products you add, if any company will not following the products, we will stop business with them directly.</string>
    <string name="user_condition3">  3-	Not allowed to add any logo or contact or website or any thinks about your company on your projects photos or products details. Wallpaper of products photo should by white color.</string>
    <string name="user_condition4">  4-	We will check all products before adding to Apps</string>
    <string name="user_condition5"> 5-	All companies should double check if the products it is in good condition or no because you should receive same condition you handover, and if any company will not follow our structure we will stop the business with them.</string>
    <string name="user_condition6"> 6-	Every company should send one or more employee with wearing our T-shirt have logo App, and your employee have full responsibility to load and unload the products and fix and remove the projects.</string>
    <string name="user_condition7"> 7-	In some products we will have warranty money. Will hold it until retune the products in good condition or if the projects will not in good condition we will deduct from amount.</string>
    <string name="user_condition8">  8-	We will deduct 10% of the amount of rental feed as service feed.</string>
    <string name="user_condition9"> 9-	The rental feed will hold in app management until the costumer receive the products in good condition, then you will receive 50% of amount and balance amount will receive while finish the event and retune the products.</string>
    <string name="user_condition10"> 10-	In (safety products Section) you have to load photo of your products once you load and unload so we will know how was products condition.</string>
    <string name="user_condition11"> 11-	If you have (3D Model) of your projects will by more good, but it iss not important.</string>
    <string name="condition_admin"> Terms and conditions for tenant</string>
    <string name="admin_condition1"> 1-	Before you receive the Products you should chick if it iss in good condition or not because you have to retune in same condition you receive.</string>
    <string name="admin_condition2"> 2-	Whenever you order you have to deposit some money on some products as warrant to have over the Products in same condition and then we will return your money.</string>
    <string name="admin_condition3">  3-	The price will not include fixing and delivery in some Conditions, if there is so will adding to your bill before you complete the payment. </string>
    <string name="admin_condition4"> 4-	In (safety products Section) you have to load photo of your products once you load and unload so we will know how was products condition.</string>
    <string name="condition_warn"> If you read all Terms and conditions  please  accept. Because if you not read you will be have full responsibility after that.</string>
    <string name="accept_conditions">Accept Terms and Conditions</string>
</resources>