<?xml
    version="1.0"
    encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_ground"
        android:padding="@dimen/_8sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/conditionss" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:text="@string/condition_title" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:text="@string/condition_user" />


        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition1" />

        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition2" />

        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition3" />

        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition4" />

        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition5" />

        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition6" />

        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition7" />

        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition8" />


        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition9" />


        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition10" />


        <TextView
            style="@style/item_condition"
            android:text="@string/user_condition11" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="@string/condition_admin" />


        <TextView
            style="@style/item_condition"
            android:text="@string/admin_condition1" />

        <TextView
            style="@style/item_condition"
            android:text="@string/admin_condition2" />

        <TextView
            style="@style/item_condition"
            android:text="@string/admin_condition3" />

        <TextView
            style="@style/item_condition"
            android:text="@string/admin_condition4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="@string/condition_warn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_acceptTerms"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/accept_conditions"
            android:textColor="#FFF"
            android:padding="@dimen/_12sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:onClick="acceptConditions"
            android:layout_marginTop="@dimen/_24sdp"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_16sdp"
            app:rippleColor="#FFF"
            app:strokeWidth="@dimen/_1sdp"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>
</layout>