<?xml
    version="1.0"
    encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.buildyourevent.buildyourevent.ui.CategoriesFragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.buildyourevent.buildyourevent.ui.home.SettingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.buildyourevent.buildyourevent.ui.notification.NotificationFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_Setting"
        android:name="com.buildyourevent.buildyourevent.loginRequest.view.setting.AppSettingFragment"
        android:label="@string/title_Settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.buildyourevent.buildyourevent.ui.home.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>